# AosAndSoa2

./: .gitignore
src/: CMakeLists.txt  cmakeGccLinuxX64.sh  cmakeMsvcWinX64.bat  soa.cpp
